syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/labasubagia/simplebank/grpc/pb";

message CreateAccountRequest {
    string currency = 1;
}

message CreateAccountResponse {
    Account account = 1;
}
